@@ -211,6 +211,7 @@ public:
   static const std::string	BZDB_EXPLODETIME;
   static const std::string	BZDB_FAKELAG;
   static const std::string	BZDB_FLAGALTITUDE;
+  static const std::string	BZDB_FLAGEFFECTTIME;
   static const std::string	BZDB_FLAGHEIGHT;
   static const std::string	BZDB_FLAGPOLEWIDTH;
   static const std::string	BZDB_FLAGPOLESIZE;
